--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <title>Aivazovski_page</title>
 </head>
 <body>
-    Aberere
+    <header class="header" aria-label="header">
+        <div class="container">
+            <nav class="nav" aria-label="header navigation">
+                <ul class="nav-list" aria-label="header list navigation">
+                    <li>
+                        <a href="http://" class="nav-link"  aria-label="link to home">Home</a>
+                    </li>
+                    <li>
+                        <a href="http://" class="nav-link"  aria-label="link to about">About</a>
+                    </li>
+                    <li>
+                        <a href="http://" class="nav-link"  aria-label="link to History">History</a>
+                    </li>
+                    <li>
+                        <a href="http://" class="nav-link"  aria-label="link to portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="http://" class="nav-link"  aria-label="link to contacts">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
