--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#portfolio-id" class="nav-link"  aria-label="link to portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="http://" class="nav-link"  aria-label="link to contacts">Contacts</a>
+                        <a href="#contacts-id" class="nav-link"  aria-label="link to contacts">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -77,8 +77,36 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="contacts" id="contacts-id" aria-label='contacts section'>
+        <div class="container">
+            <h2 class="contacts-title">Contacts</h2>
+            <button type="button" class="contacts-button">
+                <a href="https://ayvazovskiy.su">ayvazovskiy.su</a>
+            </button>
+            <address class="socials" aria-label='social icons'>
+                <a href="https://www.youtube.com" target="_blank">
+                    <svg class="social-icon" aria-label="icon YouTube" >
+                        <use href="./assets/sprites.svg#YouTube-icon"> </use>
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com" target="_blank">
+                    <svg class="social-icon" aria-label="icon YouTube" >
+                        <use href="./assets/sprites.svg#linkid-icon"> </use>
+                    </svg>
+                </a>
+                <a href='https://ru-ru.facebook.com' target="_blank">
+                    <svg class="social-icon" aria-label="icon YouTube" >
+                        <use href="./assets/sprites.svg#Facebook-icon"> </use>
+                    </svg>
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <svg class="social-icon" aria-label="icon YouTube" >
+                        <use href="./assets/sprites.svg#instagram-icon"> </use>
+                    </svg>
+                </a>
+            </address>
+            <p class="contacts-info " aria-label="information about contacts">More works you can see in these social networks</p>
+        </div>
     </footer>
 </body>
 </html>
