added mobile navigation menu

--- a/index.html
+++ b/index.html
@@ -31,6 +31,39 @@
             </nav>
         </div>
     </header>
+    <div class="mobile-navigation" aria-label="mobile-navigation">
+        <label for="toggler-id" aria-label="Open/close menu">
+            <svg class="mobile-navigation-burger-icon" aria-label="icon menu" >
+                <use href="./assets/sprites.svg#Menu-icon"> </use>
+            </svg>
+        </label>
+        <input type="checkbox" id="toggler-id" class="mobile-navigation-toggler">
+        <nav class="mobile-navigation-menu" aria-label="mob-header navigation">
+                <ul class="mobile-navigation-list" aria-label="mon-header list navigation">
+                    <li>
+                        <a href="#home-id" class="mobile-navigation-link"  aria-label="link to home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#about-id" class="mobile-navigation-link"  aria-label="link to about">About</a>
+                    </li>
+                    <li>
+                        <a href="#history-id" class="mobile-navigation-link"  aria-label="link to History">History</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio-id" class="mobile-navigation-link"  aria-label="link to portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contacts-id" class="mobile-navigation-link"  aria-label="link to contacts">Contacts</a>
+                    </li>
+                </ul>
+                <label for="toggler-id" class="mobile-navigation-close" aria-label="Open/close menu">
+                <svg class="mobile-navigation-close-icon" aria-label="icon Close" >
+                    <use href="./assets/sprites.svg#Close-icon"> </use>
+                </svg>
+            </label>
+            </nav>
+
+    </div>
     <main aria-label="main">
         <section class="home" aria-label="Home section" id="home-id">
             <div class="container">
